Im pushing HTML NEWgit add .git add .

--- a/html_1/start2.html
+++ b/html_1/start2.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Westhill Web</h1>
         <nav>
-           
+            <li><a href="https://www.niche.com/k12/westhill-high-school-stamford-ct/">Reviews</a></li> 
         </nav>
     </header>
 
