Im Pushing HTML

--- a/html_1/start2.html
+++ b/html_1/start2.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Westhill Web</h1>
+        <h1>Westhill Web</h1>  <img src="Vikings.png" alt="Vikings Logo">
         <nav>
             <li><a href="https://www.niche.com/k12/westhill-high-school-stamford-ct/">Reviews</a></li> 
         </nav>
@@ -34,7 +34,7 @@
             <a href="Start.html">Go back!</a>
         </div>
 
-        <img src="Vikings.png" alt="Vikings Logo">
+    
     </main>
 
     <footer>
