--- a/html_1/start2.html
+++ b/html_1/start2.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>My First Website</title>
+  
+     
 </head>
 
 <body>
@@ -28,7 +30,13 @@
             </div>
         </div>
 
-       
+        <div class="chat-container">
+            <div id="chatbox">
+                <p class="bot-message">Hello! How can I assist you today?</p>
+            </div>
+            <input type="text" id="userInput" placeholder="Type your message...">
+            <button onclick="sendMessage()">Send</button>
+        </div>
 
         <div class="button2">
             <a href="Start.html">Go back!</a>
